fix: dropdown text overflow

--- a/src/components/Dropdown/dropdown.module.css
+++ b/src/components/Dropdown/dropdown.module.css
@@ -24,8 +24,10 @@
     font-family: var(--font-main);
     text-align: left;
     position: relative;
-    overflow: hidden;
     background-color: var(--color-bg);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .head::placeholder {
     color: var(--font-color-inactive);
@@ -66,6 +68,9 @@
     background-color: transparent;
     color: var(--font-color-primary);
     font-size: 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .tail button:hover, .tail button:focus {
     background-color: var(--color-primary);
